GNOME Bugzilla – Bug 704399
ev_view_accessible_get_caret_offset doesn't work if the caret navigation is enabled
Last modified: 2013-07-18 08:03:40 UTC
ev_view_accessible_get_caret_offset doesn't return the correct offset value if the caret navigation is enabled.
Created attachment 249409 [details] [review] Return the correct offset when the caret navigation is enabled ev-view-accessible only maintains the text of the current page, but the cursor could be in a different page, as we work with offsets per page, the patch returns offset == -1 in that case.
Review of attachment 249409 [details] [review]: Ok, pushed to git master, thanks!