ev-view-accessibl: Fix get_caret_offset when the caret navigation is enabled

https://bugzilla.gnome.org/show_bug.cgi?id=704399